--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,18 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    h1 {
+        @apply text-4xl;
+    }
+
+    h2 {
+        @apply text-3xl;
+    }
+
+    ul {
+        @apply list-disc ms-4;
+    }
+
+    ol {
+        @apply list-decimal ms-4;
+    }
+}
 
 
-/* ::-webkit-scrollbar-corner {
-    background: rgba(0, 0, 0, 0.5);
-} */
-
+/* Scrollbar styling */
 * {
     scrollbar-width: thin;
     scrollbar-color: var(--scroll-bar-color) var(--scroll-bar-bg-color);
 }
 
-/* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 12px;
     height: 12px;
