--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,3 +41,8 @@
     border-radius: 20px;
     border: 3px solid var(--scroll-bar-bg-color);
 }
+
+.ck-editor__editable {
+    min-height: 300px;
+    max-height: 300px;
+}
